Finish word2vec training endpoint
